// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  aria-label="issues.on_file_x.proj-name, comp-name"
  className="component-name text-ellipsis"
>
  <QualifierIcon
    className="spacer-right"
    qualifier="FIL"
  />
  <span
    title="proj-name - test-branch"
  >
    proj-name
    <span
      className="slash-separator"
    />
  </span>
  <span
    title="comp-name"
  >
    comp-name
  </span>
</div>
`;

exports[`renders issues properly for views 1`] = `
<div
  aria-label="issues.on_file_x.proj-name, comp-name"
  className="component-name text-ellipsis"
>
  <QualifierIcon
    className="spacer-right"
    qualifier="FIL"
  />
  <span
    title="proj-name"
  >
    proj-name
     - 
    <span
      className="badge"
    >
      branches.main_branch
    </span>
    <span
      className="slash-separator"
    />
  </span>
  <span
    title="comp-name"
  >
    comp-name
  </span>
</div>
`;

exports[`renders issues properly for views: with branch information 1`] = `
<div
  aria-label="issues.on_file_x.proj-name, comp-name"
  className="component-name text-ellipsis"
>
  <QualifierIcon
    className="spacer-right"
    qualifier="FIL"
  />
  <span
    title="proj-name - test-branch"
  >
    proj-name
     - 
    <BranchIcon />
    <span>
      test-branch
    </span>
    <span
      className="slash-separator"
    />
  </span>
  <span
    title="comp-name"
  >
    comp-name
  </span>
</div>
`;
